--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "lerna run --scope @typescript/* --parallel start",
-    "build": "lerna run --scope @typescript/* build",
-    "serve": "lerna run --scope @typescript/* --parallel serve",
-    "clean": "lerna run --scope @typescript/* --parallel clean"
+    "start": "lerna run --scope @mfe-starter-kit/* --parallel start",
+    "build": "lerna run --scope @mfe-starter-kit/* build",
+    "serve": "lerna run --scope @mfe-starter-kit/* --parallel serve",
+    "clean": "lerna run --scope @mfe-starter-kit/* --parallel clean"
   },
   "repository": {
     "type": "git",
