--- a/shell/package.json
+++ b/shell/package.json
@@ -2,18 +2,18 @@
   "name": "@mfe-starter-kit/app1",
   "version": "0.0.0",
   "devDependencies": {
-    "@babel/core": "7.17.9",
-    "@babel/preset-react": "7.16.7",
-    "@babel/preset-typescript": "7.16.7",
-    "@types/react": "17.0.44",
-    "@types/react-dom": "17.0.16",
-    "babel-loader": "8.2.4",
-    "html-webpack-plugin": "5.5.0",
-    "serve": "13.0.2",
-    "typescript": "4.3.5",
-    "webpack": "5.70.0",
-    "webpack-cli": "4.9.2",
-    "webpack-dev-server": "4.8.1"
+    "@babel/core": "^7.17.9",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/react": "^17.0.44",
+    "@types/react-dom": "^17.0.16",
+    "babel-loader": "^8.2.4",
+    "html-webpack-plugin": "^5.5.0",
+    "serve": "^13.0.2",
+    "typescript": "^4.3.5",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "scripts": {
     "start": "webpack-cli serve",
@@ -22,7 +22,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   }
 }
