--- a/app/shell/package.json
+++ b/app/shell/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@mfe-starter-kit/app1",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Shell - Micro Frontend Starter Kit",
+  "repository": "https://github.com/congmul/MFE-starterkit",
+  "license": "",
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@types/react": "^17.0.44",
-    "@types/react-dom": "^17.0.16",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "babel-loader": "^8.2.4",
     "html-webpack-plugin": "^5.5.0",
     "serve": "^13.0.2",
