--- a/app/shell/package.json
+++ b/app/shell/package.json
@@ -11,8 +11,14 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "babel-loader": "^8.2.4",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.13",
+    "postcss-loader": "^6.2.1",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
     "serve": "^13.0.2",
+    "style-loader": "^3.3.1",
     "typescript": "^4.3.5",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
