--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
   "bugs": {
     "url": "https://github.com/congmul/MFE-starterkit/issues"
   },
-  "homepage": "https://github.com/congmul/MFE-starterkit#readme"
+  "homepage": "https://github.com/congmul/MFE-starterkit#readme",
+  "dependencies": {}
 }
