--- a/app/dashboard/package.json
+++ b/app/dashboard/package.json
@@ -32,8 +32,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0"
   }
 }
